# pycsr

./: .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  CNAME  README.md  _quarto.yml  custom.scss  env-dev.html  env-dev.qmd  env-pkg.html  env-pkg.qmd  env-uv.html  env-uv.qmd  events.tsv  index.html  index.qmd  intro-polars.html  intro-polars.qmd  intro.html  intro.qmd  pkg-management.html  pkg-management.qmd  pkg-overview.html  pkg-overview.qmd  pkg-structure.html  pkg-structure.qmd  preface.html  preface.qmd  pyproject.toml  references.bib  references.html  requirements.txt  robots.txt  search.json  sitemap.xml  submission-dryrun.html  submission-dryrun.qmd  submission-overview.html  submission-overview.qmd  (+17 more)
.devcontainer/: devcontainer.json
.github/workflows/: quarto-publish.yml  requirements.txt
assets/: cover.sh  favicon.sh
data/: adae.parquet  adlbc.parquet  adlbh.parquet  adlbhy.parquet  adqsadas.parquet  adqscibc.parquet  adqsnpix.parquet  adsl.parquet  adtte.parquet  advs.parquet
rtf/: tlf_ae_specific.rtf  tlf_ae_summary.rtf  tlf_baseline.rtf  tlf_disposition.rtf  tlf_efficacy_ancova.rtf  tlf_population.rtf
site_libs/bootstrap/: bootstrap-575e75d2bf8055536ead341fe425b737.min.css  bootstrap-73270a0a8acf4932942d8ed4dba1f721.min.css  bootstrap-7d0db113dbc7f94ae065443554116337.min.css  bootstrap-8f9bd8ba083e7b060590dbf18688554a.min.css  bootstrap-987072e8c176bb9905a997501f681d66.min.css  bootstrap-ce808e12bafa31326a113267a8037989.min.css  bootstrap-d242333e626cc5b3ec7068f034c6f638.min.css  bootstrap.min.css
slides/: custom.scss  workshop-slides.html  workshop-slides.qmd
slides/rinpharma2025/: custom.scss  index.qmd
src/pycsr/: __init__.py
