[project]
name = "pycsr"
version = "0.1.0"
description = "Python for Clinical Study Reports and Submission"
authors = [
    { name = "Nan Xiao", email = "hello@nanx.me" }
]
dependencies = [
    "plotnine>=0.14.1",
    "polars>=1.13.1",
    "jupyter>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip-tools>=7.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pycsr"]
