[project]
name = "pycsr"
version = "0.1.0"
description = "Python for Clinical Study Reports and Submission"
authors = [
    { name = "Yilong Zhang", email = "elong0527@gmail.com" },
    { name = "Nan Xiao", email = "hello@nanx.me" },
]
dependencies = [
    "jupyter>=1.1.1",
    "plotnine>=0.15.0",
    "polars>=1.0.0",
    "pyarrow>=21.0.0",
    "rtflite>=1.0.2",
    "pkglite>=0.1.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "isort>=5.13.2",
    "pip-tools>=7.4.1",
]

