[project]
name = "pycsr"
version = "0.2.0"
description = "Python for Clinical Study Reports and Submission"
authors = [
    { name = "Yilong Zhang", email = "elong0527@gmail.com" },
    { name = "Nan Xiao", email = "hello@nanx.me" },
]
dependencies = [
    "jupyter>=1.1.1",
    "plotnine>=0.15.0",
    "polars>=1.0.0",
    "pyarrow>=22.0.0",
    "rtflite>=1.1.0",
    "pkglite>=0.1.8",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.14.5", "isort>=7.0.0"]
